--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>Impact Tomorrow</title>
+	<title>Impact Tomorrow | About Us</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -64,58 +64,19 @@
 							<a href="blog.html">BLOG</a>
 						</li>
 						<li>
-							<a href="#" id="navevents">EVENTS</a>
+							<a href="events.html" id="navevents">EVENTS</a>
 						</li>
 						<li class="active">
 							<a href="#">ABOUT</a>
 						</li>
 						<li>
-							<a href="support.html">SUPPORT</a>
+							<a href="support.html">SPONSORS</a>
 						</li>
 					</ul>	
 				</div>
 
 			</div>
 		</div>
-
-		<!--<div class="navbar navbar-default navbar-fixed-top visible-xs">
-			<div class="container">
-
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        				<span class="sr-only">Toggle navigation</span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-      				</button>
-
-					<a class="navbar-brand" href="index.html">
-						<img src="images/settingUp.png" alt="logo" id="logo">
-					</a>
-				</div>
-				
-				<div class="collapse navbar-collapse" id="navbar">					
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="index.html" id="navhome">HOME</a>
-						</li>
-						<li>
-							<a href="blog.html">BLOG</a>
-						</li>
-						<li>
-							<a href="#" id="navevents">EVENTS</a>
-						</li>
-						<li>
-								<a href="#">ABOUT</a>
-						</li>
-						<li>
-							<a href="#">SUPPORT</a>
-						</li>
-					</ul>	
-				</div>
-
-			</div>
-		</div>-->
 
 	<div class="container">
         <!-- Introduction Row -->
@@ -192,38 +153,38 @@
 				<div class="col-md-3 footer-list">
 					<h4>Impact Tomorrow</h4>
 						<ul>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Support</a></li>
-							<li><a href="#">Previous Partners</a></li>
-							<li><a href="#">Past Events</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="support.html">Support</a></li>
+							<li><a href="support.html">Previous Sponsors</a></li>
+							<li><a href="events.html">Past Events</a></li>
 						</ul>
 				</div>
 
 				<div class="col-md-3 footer-list">
 					<h4>Resources</h4>
 						<ul>
-							<li><a href="#">The Lean Startup</a></li>
-							<li><a href="#">Zero To One</a></li>
-							<li><a href="#">How To Start A Startup</a></li>
-							<li><a href="#">Codecademy</a></li>
-							<li><a href="#">Effectuation Theory</a></li>
+							<li><a href="http://www.amazon.ca/The-Lean-Startup-Entrepreneurs-Continuous/dp/0307887898" target="_blank">The Lean Startup</a></li>
+							<li><a href="http://zerotoonebook.com/" target="_blank">Zero To One</a></li>
+							<li><a href="https://www.youtube.com/channel/UCxIJaCMEptJjxmmQgGFsnCg" target="_blank">How To Start A Startup</a></li>
+							<li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a></li>
+							<li><a href="http://www.effectuation.org/learn/effectuation-101" target="_blank">Effectuation Theory</a></li>
 						</ul>
 				</div>
 
 				<div class="col-md-3 footer-list" id="connect">
 					<h4>Connect</h4>
 						<ul>
-							<li><a href="#">Facebook</a></li>
-							<li><a href="#">Twitter</a></li>
-							<li><a href="#">Instagram</a></li>
-							<li><a href="#">Email</a></li>
+							<li><a href="http://facebook.com/impacttomorrow" target="_blank">Facebook</a></li>
+							<li><a href="http://twitter.com/impacttomorrow" target="_blank">Twitter</a></li>
+							<li><a href="http://instagram.com/impacttomorrow" target="_blank">Instagram</a></li>
+							<li><a href="mailto:impacttomorrow@gmail.com" target="_blank">Email</a></li>
 						</ul>
 				</div>
 
 				<div class="col-md-3 footer-list">
 					<div id="mailchimpFooter">
 				
-					<form action="//impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&amp;id=ad064a8b29" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>	
+					<form action="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&amp;id=ad064a8b29" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>	
     					<div id="mc_embed_signup_scroll">
 							<h4 id="subscribeFooter">Subscribe to our mailing list!</h4><span><p>(We won't send you spam)</p></span>
 							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter email" required>
