--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" type="image/png" href="images/favicon.ico">
 
-    <title>Impact Tomorrow Blog</title>
+    <title>Impact Tomorrow | Blog</title>
 
     <!--Normalize CSS-->
     <link rel="stylesheet" href="css/normalize.css">
@@ -69,13 +69,13 @@
                             <a href="blog.html">BLOG</a>
                         </li>
                         <li>
-                            <a href="#" id="navevents">EVENTS</a>
+                            <a href="events.html" id="navevents">EVENTS</a>
                         </li>
                         <li>
                             <a href="about.html">ABOUT</a>
                         </li>
                         <li>
-                            <a href="support.html">SUPPORT</a>
+                            <a href="support.html">SPONSORS</a>
                         </li>
                     </ul>   
                 </div>
@@ -164,44 +164,44 @@
     
 
     <!--Footer-->
-    <div class="row" id="footer">
+        <div class="row" id="footer">
             <div class="container">
 
                 <div class="col-md-3 footer-list">
                     <h4>Impact Tomorrow</h4>
                         <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Support</a></li>
-                            <li><a href="#">Previous Partners</a></li>
-                            <li><a href="#">Past Events</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="support.html">Support</a></li>
+                            <li><a href="support.html">Previous Sponsors</a></li>
+                            <li><a href="events.html">Past Events</a></li>
                         </ul>
                 </div>
 
                 <div class="col-md-3 footer-list">
                     <h4>Resources</h4>
                         <ul>
-                            <li><a href="#">The Lean Startup</a></li>
-                            <li><a href="#">Zero To One</a></li>
-                            <li><a href="#">How To Start A Startup</a></li>
-                            <li><a href="#">Codecademy</a></li>
-                            <li><a href="#">Effectuation Theory</a></li>
+                            <li><a href="http://www.amazon.ca/The-Lean-Startup-Entrepreneurs-Continuous/dp/0307887898" target="_blank">The Lean Startup</a></li>
+                            <li><a href="http://zerotoonebook.com/" target="_blank">Zero To One</a></li>
+                            <li><a href="https://www.youtube.com/channel/UCxIJaCMEptJjxmmQgGFsnCg" target="_blank">How To Start A Startup</a></li>
+                            <li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a></li>
+                            <li><a href="http://www.effectuation.org/learn/effectuation-101" target="_blank">Effectuation Theory</a></li>
                         </ul>
                 </div>
 
                 <div class="col-md-3 footer-list" id="connect">
                     <h4>Connect</h4>
                         <ul>
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Instagram</a></li>
-                            <li><a href="#">Email</a></li>
+                            <li><a href="http://facebook.com/impacttomorrow" target="_blank">Facebook</a></li>
+                            <li><a href="http://twitter.com/impacttomorrow" target="_blank">Twitter</a></li>
+                            <li><a href="http://instagram.com/impacttomorrow" target="_blank">Instagram</a></li>
+                            <li><a href="mailto:impacttomorrow@gmail.com" target="_blank">Email</a></li>
                         </ul>
                 </div>
 
                 <div class="col-md-3 footer-list">
                     <div id="mailchimpFooter">
                 
-                    <form action="//impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&amp;id=ad064a8b29" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>  
+                    <form action="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&amp;id=ad064a8b29" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>  
                         <div id="mc_embed_signup_scroll">
                             <h4 id="subscribeFooter">Subscribe to our mailing list!</h4><span><p>(We won't send you spam)</p></span>
                             <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter email" required>
@@ -218,43 +218,7 @@
         </div>
 
     </div>
-<!--
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </div>
-    </footer>
--->
+
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -262,8 +226,6 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
 
 </body>
 
