--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>Impact Tomorrow</title>
+	<title>Impact Tomorrow | Home</title>
 
 	<!--Normalize CSS-->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -45,44 +45,44 @@
 		    <div class="item active">
 		      <img src="images/carousel/item4comp.jpg" alt="...">
 			      <div class="container">
-				      <div class="carousel-caption">
+				      <div class="carousel-caption" id="firstslide">
 				          <h1>Impact Tomorrow</h1>
 				          <h4>Operating since 2013</h4>
 				          <p class="hidden-xs hidden-sm">We host events to ignite the entrepreneurial spirit in every young innovative mind.</p>
-				          <a href="#"><p class="cta hidden-xs">Sign up today</p></a>
+				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
 				      </div>
 			      </div>
 		    </div>
 		    <div class="item">
 		      <img src="images/carousel/item5comp.jpg" alt="...">
-		      <div class="container">
-			      <div class="carousel-caption">
-			          <h1>Educating you<br> with a research-driven method</h1>
-			          <p class="hidden-xs hidden-sm">Our Entrepreneurial Method gives you the resources needed to start a business.</p>
-			          <a href="#"><p class="cta hidden-xs">Sign up today</p></a>
-			      </div>
-			  </div>
+			      <div class="container">
+				      <div class="carousel-caption">
+				          <h1>Educating you<br> with a research-driven method</h1>
+				          <p class="hidden-xs hidden-sm">Our Entrepreneurial Method gives you the resources needed to start a business.</p>
+				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank" ><p class="cta hidden-xs">Sign up today</p></a>
+				      </div>
+				  </div>
 		    </div>
 		    <div class="item">
 		      <img src="images/carousel/item6comp.jpg" alt="...">
-		      <div class="container">
-			      <div class="carousel-caption">
-			          <h1>Industry Leaders<br>are your mentors at every workshop</h1>
-			          <p class="hidden-xs hidden-sm">We bring in local founders to provide you with expert startup advice. </p>
-			          <a href="#"><p class="cta hidden-xs">Sign up today</p></a>
-			      </div>
-			  </div>
+			      <div class="container">
+				      <div class="carousel-caption">
+				          <h1>Industry Leaders<br>are your mentors at every workshop</h1>
+				          <p class="hidden-xs hidden-sm">We bring in local founders to provide you with expert startup advice. </p>
+				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
+				      </div>
+				  </div>
 		    </div>
 		    <div class="item">
 		      <img src="images/carousel/item7comp.jpg" alt="...">
-		      <div class="container">
-			      <div class="carousel-caption">
-			          <h1>Promoting Entrepreneurship <br> to Youth Across Ontario</h1>
-			          <p class="hidden-xs hidden-sm">Events in Waterloo-Kitchener, Mississauga, and Toronto for the 2015-2016 year.</p>
-			          <a href="#"><p class="cta hidden-xs">Sign up today</p></a>
-			      </div>
-			  </div>
-		    </div>
+			      <div class="container">
+				      <div class="carousel-caption">
+				          <h1>Promoting Entrepreneurship <br> to Youth Across Ontario</h1>
+				          <p class="hidden-xs hidden-sm">Events in Waterloo-Kitchener, Mississauga, and Toronto for the 2015-2016 year.</p>
+				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
+				      </div>
+				  </div>
+			    </div>
 		  </div>
 		 
 		  <!-- Controls -->
@@ -120,59 +120,19 @@
 							<a href="blog.html">BLOG</a>
 						</li>
 						<li>
-							<a href="#" id="navevents">EVENTS</a>
+							<a href="events.html" id="navevents">EVENTS</a>
 						</li>
 						<li>
 							<a href="about.html">ABOUT</a>
 						</li>
 						<li>
-							<a href="support.html">SUPPORT</a>
+							<a href="support.html">SPONSORS</a>
 						</li>
 					</ul>	
 				</div>
 
 			</div>
-		</div>
-
-		<!--<div class="navbar navbar-default navbar-fixed-top visible-xs">
-			<div class="container">
-
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        				<span class="sr-only">Toggle navigation</span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-      				</button>
-
-					<a class="navbar-brand" href="index.html">
-						<img src="images/settingUp.png" alt="logo" id="logo">
-					</a>
-				</div>
-				
-				<div class="collapse navbar-collapse" id="navbar">					
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="index.html" id="navhome">HOME</a>
-						</li>
-						<li>
-							<a href="blog.html">BLOG</a>
-						</li>
-						<li>
-							<a href="#" id="navevents">EVENTS</a>
-						</li>
-						<li>
-							<a href="#">ABOUT</a>
-						</li>
-						<li>
-							<a href="#">SUPPORT</a>
-						</li>
-					</ul>	
-				</div>
-
-			</div>
-		</div>-->
-		
+		</div>		
 		
 		<div class="row" id="about">
 			<div class="container-fluid aboutContainer">
@@ -211,7 +171,7 @@
       				<div class="caption">
         				<h3 class="hidden-xs">Impact Tomorrow Community Meet-Ups</h3>
         				<p class="hidden-xs">We’ll be holding three meet-ups in Waterloo-Kitchener, Peel, and Toronto prior to our annual Expo. Look out for more details soon!</p>
-        				<p class="btnContainer"><a href="#" class="btn btn-default" role="button">Read More</a></p>
+        				<p class="btnContainer"><a href="events.html" class="btn btn-default" role="button">Read More</a></p>
       				</div>
     			</div>
 			</div>
@@ -222,7 +182,7 @@
       				<div class="caption">
         				<h3 class="hidden-xs">Impact Tomorrow Expo 2016</h3>
         				<p class="hidden-xs">Our flagship event will feature a full-day of entrepreneurship workshops and speakers! We’ll be unveiling more details soon.</p>
-        				<p class="btnContainer"><a href="#" class="btn btn-default" role="button">Read More</a></p>
+        				<p class="btnContainer"><a href="events.html" class="btn btn-default" role="button">Read More</a></p>
       				</div>
     			</div>
 			</div>
@@ -312,7 +272,7 @@
 			</div><!--end row "blog"-->
 		</div>
 
-		<a href="http://www.impacttomorrow.ca" target="_blank" id="sponsorUs"><div class="row hidden-xs" id="sponsor">
+		<a href="content/Impact Tomorrow 2015-2016 Sponsorship Package.pdf" target="_blank" id="sponsorUs"><div class="row hidden-xs" id="sponsor">
 
 			<h2>Sponsor our next event! Learn more here<span class="glyphicon glyphicon-chevron-right"></span></h2>
 
@@ -320,7 +280,7 @@
 
 		<div class="row visible-xs" id="sponsor">
 
-			<a href="#"><h2>Sponsor Us!<a href="#"><span class="glyphicon glyphicon-chevron-right"></span></a></h2></a>
+			<a href="content/Impact Tomorrow 2015-2016 Sponsorship Package.pdf" target="_blank"><h2>Sponsor Us!<a href="#"><span class="glyphicon glyphicon-chevron-right"></span></a></h2></a>
 
 		</div>
 
@@ -330,38 +290,38 @@
 				<div class="col-md-3 footer-list">
 					<h4>Impact Tomorrow</h4>
 						<ul>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Support</a></li>
-							<li><a href="#">Previous Partners</a></li>
-							<li><a href="#">Past Events</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="support.html">Support</a></li>
+							<li><a href="support.html">Previous Sponsors</a></li>
+							<li><a href="events.html">Past Events</a></li>
 						</ul>
 				</div>
 
 				<div class="col-md-3 footer-list">
 					<h4>Resources</h4>
 						<ul>
-							<li><a href="#">The Lean Startup</a></li>
-							<li><a href="#">Zero To One</a></li>
-							<li><a href="#">How To Start A Startup</a></li>
-							<li><a href="#">Codecademy</a></li>
-							<li><a href="#">Effectuation Theory</a></li>
+							<li><a href="http://www.amazon.ca/The-Lean-Startup-Entrepreneurs-Continuous/dp/0307887898" target="_blank">The Lean Startup</a></li>
+							<li><a href="http://zerotoonebook.com/" target="_blank">Zero To One</a></li>
+							<li><a href="https://www.youtube.com/channel/UCxIJaCMEptJjxmmQgGFsnCg" target="_blank">How To Start A Startup</a></li>
+							<li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a></li>
+							<li><a href="http://www.effectuation.org/learn/effectuation-101" target="_blank">Effectuation Theory</a></li>
 						</ul>
 				</div>
 
 				<div class="col-md-3 footer-list" id="connect">
 					<h4>Connect</h4>
 						<ul>
-							<li><a href="#">Facebook</a></li>
-							<li><a href="#">Twitter</a></li>
-							<li><a href="#">Instagram</a></li>
-							<li><a href="#">Email</a></li>
+							<li><a href="http://facebook.com/impacttomorrow" target="_blank">Facebook</a></li>
+							<li><a href="http://twitter.com/impacttomorrow" target="_blank">Twitter</a></li>
+							<li><a href="http://instagram.com/impacttomorrow" target="_blank">Instagram</a></li>
+							<li><a href="mailto:impacttomorrow@gmail.com" target="_blank">Email</a></li>
 						</ul>
 				</div>
 
 				<div class="col-md-3 footer-list">
 					<div id="mailchimpFooter">
 				
-					<form action="//impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&amp;id=ad064a8b29" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>	
+					<form action="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&amp;id=ad064a8b29" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>	
     					<div id="mc_embed_signup_scroll">
 							<h4 id="subscribeFooter">Subscribe to our mailing list!</h4><span><p>(We won't send you spam)</p></span>
 							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter email" required>
