fixed some links

--- a/events.html
+++ b/events.html
@@ -75,7 +75,7 @@
             	<div class="container construction">
 	            	<h1 class="hidden-xs">This page is still under construction!
 	            	<br>
-	            	Subscribe to our <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank" id="subscribeEvents">mailing list</a> for updates on our events. :)
+	            	Subscribe to our <a href="http://eepurl.com/bkhvJT" target="_blank" id="subscribeEvents">mailing list</a> for updates on our events. :)
 	            	</h1>
 	            	<h1 class="visible-xs">This page is still under construction!</h1>       
             	</div>
