--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				          <h1>Impact Tomorrow</h1>
 				          <h4>Operating since 2013</h4>
 				          <p class="hidden-xs hidden-sm">We host events to ignite the entrepreneurial spirit in every young innovative mind.</p>
-				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
+				          <a href="http://eepurl.com/bkhvJT" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
 				      </div>
 			      </div>
 		    </div>
@@ -59,7 +59,7 @@
 				      <div class="carousel-caption">
 				          <h1>Educating you<br> with a research-driven method</h1>
 				          <p class="hidden-xs hidden-sm">Our Entrepreneurial Method gives you the resources needed to start a business.</p>
-				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank" ><p class="cta hidden-xs">Sign up today</p></a>
+				          <a href="http://eepurl.com/bkhvJT" target="_blank" ><p class="cta hidden-xs">Sign up today</p></a>
 				      </div>
 				  </div>
 		    </div>
@@ -69,7 +69,7 @@
 				      <div class="carousel-caption">
 				          <h1>Industry Leaders<br>are your mentors at every workshop</h1>
 				          <p class="hidden-xs hidden-sm">We bring in local founders to provide you with expert startup advice. </p>
-				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
+				          <a href="http://eepurl.com/bkhvJT" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
 				      </div>
 				  </div>
 		    </div>
@@ -79,7 +79,7 @@
 				      <div class="carousel-caption">
 				          <h1>Promoting Entrepreneurship <br> to Youth Across Ontario</h1>
 				          <p class="hidden-xs hidden-sm">Events in Waterloo-Kitchener, Mississauga, and Toronto for the 2015-2016 year.</p>
-				          <a href="http://impacttomorrow.us10.list-manage.com/subscribe/post?u=397903b7d2d9508f6240ecbdc&id=ad064a8b29" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
+				          <a href="http://eepurl.com/bkhvJT" target="_blank"><p class="cta hidden-xs">Sign up today</p></a>
 				      </div>
 				  </div>
 			    </div>
@@ -167,7 +167,7 @@
 
 			<div class="col-sm-6 col-md-6">
     			<div class="thumbnail upcoming">
-      				<a href="#"><img src="images/meetupscomm.jpg"></a>
+      				<a href="events.html"><img src="images/meetupscomm.jpg"></a>
       				<div class="caption">
         				<h3 class="hidden-xs">Impact Tomorrow Community Meet-Ups</h3>
         				<p class="hidden-xs">We’ll be holding three meet-ups in Waterloo-Kitchener, Peel, and Toronto prior to our annual Expo. Look out for more details soon!</p>
@@ -178,7 +178,7 @@
 			
 			<div class="col-sm-6 col-md-6">
     			<div class="thumbnail upcoming">
-      				<a href="#"><img src="images/expo2015comp.jpg"></a>
+      				<a href="events.html"><img src="images/expo2015comp.jpg"></a>
       				<div class="caption">
         				<h3 class="hidden-xs">Impact Tomorrow Expo 2016</h3>
         				<p class="hidden-xs">Our flagship event will feature a full-day of entrepreneurship workshops and speakers! We’ll be unveiling more details soon.</p>
