--- a/support.html
+++ b/support.html
@@ -89,8 +89,8 @@
 
 
 
-				<p class="sponsorUs">Please <a href="#">contact us</a> to learn more about how you can boost your exposure to the high school demographic! </p>
-				<p class="sponsorUs">You can <b>view our sponsorship package <a href="#">here</a></b>.</p>
+				<p class="sponsorUs">Please <a href="mailto:impacttomorrow@gmail.com">contact us</a> to learn more about how you can boost your exposure to the high school demographic! </p>
+				<p class="sponsorUs">You can <b>view our sponsorship package <a href="content/Impact Tomorrow 2015-2016 Sponsorship Package.pdf" target="_blank">here</a></b>.</p>
 
             </div>
         </div>
