added sponsor and google site verification

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 	<!--Favicon-->
 	<link rel="icon" type="image/png" href="images/favicon.ico">
+	
+	<!--Google Site Verification-->
+	<meta name="google-site-verification" content="MCnhxKbEHOlUVQ96Lt4fu4D6hFJm44QGoS-wFuOgZPU" />
 
 </head>
 
