--- a/support.html
+++ b/support.html
@@ -125,6 +125,9 @@
 					
 					<a href="http://www.thinnox.com" target="_blank" class="hidden-xs"><img src="images/pastsponsor/spnsr4.png"></a>
 					<a href="http://www.thinnox.com" target="_blank" class="visible-xs"><img src="images/pastsponsor/spnsr4sm.png"></a>
+
+					<a href="http://psierp.com" target="_blank" class="hidden-xs"><img src="images/pastsponsor/spnsr1.png"></a>
+					<a href="http://psierp.com" target="_blank" class="visible-xs"><img src="images/pastsponsor/spnsr1sm.png"></a>
 				</div>
 			</div>
 		</div>
