--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
 
+    <!--FAVICON-->
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -49,7 +52,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="img/settingUp.png" id="logo">
+                    <img src="img/logo.png" id="logo">
                 </a>
             </div>
 
@@ -86,7 +89,7 @@
             <div class="header-content-inner">
                 <h1>Impact Tomorrow</h1>
                 <hr style="border-color: #1dd2af">
-                <p>We host events to ignite the entrepreneurial spirit in every young, innovative mind. <br>
+                <p style="color: #fff">We host events to ignite the entrepreneurial spirit in every young, innovative mind. <br>
                 Our Entrepreneurial Method gives you the resources needed to kickstart your venture.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll" style="background: #1dd2af">Find Out More</a>
             </div>
@@ -337,7 +340,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Contact Us</h2>
                     <hr class="primary">
-                    <p>Want to become a sponsor? Want to speak at the next big event? Send us an email and we will get back to you as soon as possible!</p>
+                    <p>Want to become a sponsor? Want to speak at the next big event? Send us your questions and one of our team members will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
@@ -349,7 +352,7 @@
 
     <section class="row" id="footer">
             <div class="container">
-                <div class="col-md-6 footer-list">
+                <div class="col-md-3 col-md-offset-3 footer-list">
                     <h4>Resources For You</h4>
                         <ul>
                             <li><a href="http://www.amazon.ca/The-Lean-Startup-Entrepreneurs-Continuous/dp/0307887898" target="_blank">The Lean Startup</a></li>
@@ -359,13 +362,13 @@
                             <li><a href="http://www.effectuation.org/learn/effectuation-101" target="_blank">Effectuation Theory</a></li>
                         </ul>
                 </div>
-                <div class="col-md-6 footer-list" id="connect">
+                <div class="col-md-3 col-md-offset-1 footer-list" id="connect">
                     <h4>Connect With Us!</h4>
                         <ul>
-                            <li><a href="https://www.facebook.com/impacttomorrow/" target="_blank">Facebook</a></li>
-                            <li><a href="https://twitter.com/impacttomorrow" target="_blank">Twitter</a></li>
-                            <li><a href="https://www.instagram.com/impacttomorrow/" target="_blank">Instagram</a></li>
-                            <li><a href="mailto:hello@impacttomorrow.ca" target="_blank">Email</a></li>
+                            <li><a href="https://www.facebook.com/impacttomorrow/" target="_blank"><span class="fa fa-facebook-official"></span>  Facebook</a></li>
+                            <li><a href="https://twitter.com/impacttomorrow" target="_blank"><span class="fa fa-twitter-square"></span> Twitter</a></li>
+                            <li><a href="https://www.instagram.com/impacttomorrow/" target="_blank"><span class="fa fa-instagram"></span> Instagram</a></li>
+                            <li><a href="mailto:hello@impacttomorrow.ca" target="_blank"><span class="fa fa-envelope-o"></span> Email</a></li>
                         </ul>
                 </div>
             </div>  
