--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="img/logo.png" id="logo">
+                    <img src="img/Logo.png" id="logo">
                 </a>
             </div>
 
