responsive horizontal scroll

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" type="text/css" href="css/roundabout.css">
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
 
     <!--FAVICON-->
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -225,7 +224,7 @@
     </section>
 
     <section class="bg-dark" id="team" style="background: #2c3e50">
-        <div class="container text-center">
+    <div class="container text-center">
                 <h2>Our Team</h2>
 
         <div class="row team" style="padding-top: 20px">
@@ -245,7 +244,7 @@
                     <small class="role">Communications</small>
                 </h3>
                 <a href="mailto:aikeda@impacttomorrow.ca"><i class="fa fa-envelope-o"></i></a>
-                <a href="https://www.linkedin.com/in/aikedasayram"><i class="fa fa-linkedin-square"></a></i>
+                <a href="https://www.linkedin.com/in/aikedasayram"><i class="fa fa-linkedin-square"></i></a>
             </div>
             <div class="profile col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="img/profiles/andy.jpg" alt="">
@@ -276,8 +275,6 @@
             </div>
         </div>
     </div>
-            </div>
-        </div>
     </section>
 
     <section id="sponsor">
@@ -288,7 +285,8 @@
                     <p>We'd love to work with you and your company to make entrepreneurship a reality for more youth. <br>
                     Our partners & sponsors have allowed the Expo to realize its full potential as a platform for youth to excel. 
                     </p>
-                <a href="content/Impact Tomorrow 2015-2016 Sponsorship Package.pdf" target="_blank" class="btn btn-primary btn-xl page-scroll" style="background: #1dd2af">Download our sponsorship package</a>
+                <a href="content/Impact Tomorrow 2015-2016 Sponsorship Package.pdf" target="_blank" class="btn btn-primary btn-xl page-scroll hidden-xs" style="background: #1dd2af;">Download our sponsorship package</a>
+                <a href="content/Impact Tomorrow 2015-2016 Sponsorship Package.pdf" target="_blank" class="btn btn-primary btn-xl page-scroll visible-xs" style="background: #1dd2af;">Sponsorship Package</a>
                 <div class="row pastsponsor">
                     <img src="img/pastsponsor/sponsors1.png"> <br>
                     <img src="img/pastsponsor/sponsors2.png">
@@ -296,7 +294,7 @@
             </div>
         </div>
     </section>
-
+ 
     <section id="speaker" style="background: #1abc9c">
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2 text-center">
