hide collapse navbar

--- a/index.html
+++ b/index.html
@@ -387,6 +387,13 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
 
+    <!--Hide Collapse when clicking outside-->
+    <script> 
+        $(document).on('click',function(){
+        $('.collapse').collapse('hide');
+        })
+    </script>
+
 </body>
 
 </html>
