--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                 <hr style="border-color: #1dd2af">
                 <p style="color: #fff">We host events to ignite the entrepreneurial spirit in every young, innovative mind. <br>
                 Our Entrepreneurial Method gives you the resources needed to kickstart your venture.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll" style="background: #1dd2af">Find Out More</a>
+                <a class="unii-listing-button unii-pink unii-medium" style="border-radius:25px; font-size:1em; width: 8em;"href="https://www.universe.com/events/impact-tomorrow-expo-2016-tickets-XV9C1B">Get Tickets</a><script type="text/javascript" src="https://www.universe.com/embed.js"/></script>
+                <!--<a href="#about" class="btn btn-primary btn-xl page-scroll" style="background: #1dd2af">Find Out More</a>-->
             </div>
         </div>
     </header>
@@ -137,8 +138,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Impact Tomorrow Expo 2016</h2>
                     <hr class="light" style="border-color: #16a085">
-                    <p class="text-faded">Our flagship event will feature a full-day of entrepreneurship workshops and speakers! We’ll be unveiling more details soon. Sign up for our mailing list to be the first to know.</p>
-                    <a href="http://goo.gl/qwFqR2" class="btn btn-default btn-xl" target="_blank">Sign Up!</a>
+                    <p class="text-faded">Our flagship event will feature a full-day of entrepreneurship workshops and speakers! The event runs from 10-6 on May 21 at the University of Toronto Mississauga campus. Enjoy a full-day of entrepreneurship activities including panels, discussions, and keynotes. Lunch and refreshments included.</p>
+                    <a class="unii-listing-button unii-pink unii-medium" style="border-radius:25px; font-size:1em; width: 8em;"href="https://www.universe.com/events/impact-tomorrow-expo-2016-tickets-XV9C1B">Sign Up!</a><script type="text/javascript" src="https://www.universe.com/embed.js"/></script>
                 </div>
             </div>
         </div>
