added ICCIT as sponsor

--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
                 <a href="content/Impact Tomorrow 2015-2016 Sponsorship Package.pdf" target="_blank" class="btn btn-primary btn-xl page-scroll visible-xs" style="background: #1dd2af;">Sponsorship Package</a>
                 <div class="row pastsponsor">
                     <img src="img/pastsponsor/sponsors1.png"> <br>
-                    <img src="img/pastsponsor/sponsors2.png">
+                    <img src="img/pastsponsor/sponsors2.png"> <br>
+                    <img src="img/pastsponsor/sponsors3.png">
                 </div>
             </div>
         </div>
